--- a/Front-end/src/styles/login.css
+++ b/Front-end/src/styles/login.css
@@ -91,8 +91,11 @@ background-color: #4a2cb7;
 @media (max-width: 768px) {
     .login-container {
         flex-direction: column;
-        position: fixed;
+        /* position: fixed;
         top: 15%;
+        left: 15%; */
+        height: 0;
+        margin-top: 100px;
         padding: 20px;
     }
 
