--- a/Front-end/src/styles/register.css
+++ b/Front-end/src/styles/register.css
@@ -6,7 +6,7 @@
 }
 
 .register-container {
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -165,7 +165,7 @@ input[type="file"] {
   }
 
   .container-img {
-    margin-left: 0;
+    margin-right: 0;
     margin-top: 20px;
   }
 
